// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PathInput should render correctly 1`] = `
<div>
  <div
    class="container with-error"
  >
    <div
      class="btn"
      title="Choose Folder"
    >
      <img
        src="img/right-panel/icon-import.svg"
      />
    </div>
    <input
      id="location-input"
      type="text"
      value="defaultFolder"
    />
  </div>
</div>
`;

exports[`test PathInput should render correctly 2`] = `
<div>
  <div
    class="container with-error"
  >
    <div
      class="btn"
      title="Choose Folder"
    >
      <img
        src="img/right-panel/icon-import.svg"
      />
    </div>
    <input
      id="location-input"
      type="text"
      value="defaultFolder"
    />
  </div>
</div>
`;

exports[`test PathInput should render correctly 3`] = `
<div>
  <div
    class="container with-error"
  >
    <div
      class="btn"
      title="Choose Folder"
    >
      <img
        src="img/right-panel/icon-import.svg"
      />
    </div>
    <input
      id="location-input"
      type="text"
      value="myDocuments"
    />
  </div>
</div>
`;
